tests/baselines/reference/parserGenericsInInterfaceDeclaration1.errors.txt
==== tests/cases/compiler/parserGenericsInInterfaceDeclaration1.ts (2 errors) ====
    interface I<T> {
       v: A<T>;
          ~
!!! parserGenericsInInterfaceDeclaration1.ts(2,7): error TS2095: Cannot find name 'A'.
       f1<T>(): T;
       f2?<T>(): T;
       <T>(): void;
       new <T>(): void;
       ~~~~~~~~~~~~~~~
!!! parserGenericsInInterfaceDeclaration1.ts(6,4): error TS2133: Constructors cannot have a return type of 'void'.
    }